[package]
name = "app"
version = "0.9.12"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
log = "0.4"
dirs = "6"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.1"
urlencoding = "2.1.3"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
